Ui changes on both sides and Reorder button

--- a/Restaurant Ordering System/public_html/Customer/customer_cart.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_cart.html
@@ -82,6 +82,7 @@ const CustomerSession = {
     localStorage.removeItem('customerLoggedIn');
     localStorage.removeItem('customerData');
     localStorage.removeItem('customerEmail');
+  localStorage.removeItem('cartItems');
     fetch('/api/logout', { method: 'POST' });
   }
 };
