--- a/Restaurant Ordering System/public_html/Customer/customer_checkout.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_checkout.html
@@ -103,6 +103,7 @@ const CustomerSession = {
         localStorage.removeItem('customerLoggedIn');
         localStorage.removeItem('customerData');
         localStorage.removeItem('customerEmail');
+	localStorage.removeItem('cartItems');
 
         // Also call server logout
         fetch('/api/logout', { method: 'POST' });
@@ -151,15 +152,26 @@ document.addEventListener('DOMContentLoaded', () => {
 
 <!-- Checkout Logic -->
 <script>
+let reorderCart = JSON.parse(localStorage.getItem('reorderCart'));
+let normalCart = JSON.parse(localStorage.getItem('cartItems'));
+
 const Cart = {
-  items: JSON.parse(localStorage.getItem('cartItems')) || [],
+  items: reorderCart || normalCart || [],
+
+  save() {
+    localStorage.setItem('cartItems', JSON.stringify(this.items));
+    localStorage.removeItem('reorderCart'); // remove reorder cart
+  },
+
   getTotal() {
     return this.items.reduce((sum, i) => sum + i.priceCents * i.qty, 0) / 100;
   },
+
   clear() {
     this.items = [];
     localStorage.removeItem('cartItems');
-  },
+    localStorage.removeItem('reorderCart'); // also clear reorder cart
+  }
 };
 
 function renderOrder() {
