--- a/Restaurant Ordering System/public_html/Customer/customer_main.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_main.html
@@ -42,29 +42,32 @@
 </header>
 
 
-  <!-- Hero -->
-  <section class="relative w-full h-64 sm:h-80 overflow-hidden">
-    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1200&q=80"
-         alt="Delicious food background"
-         class="absolute inset-0 w-full h-full object-cover brightness-75">
-    <div class="absolute inset-0 bg-gradient-to-b from-transparent to-gray-800 opacity-60"></div>
-    <div class="relative z-10 flex h-full items-center justify-center px-4">
-      <div class="text-center text-white">
-        <h2 class="text-2xl sm:text-3xl font-bold mb-2">Order Your Favorites</h2>
-        <p class="text-sm sm:text-base">Easy, fast, and safe — right from your phone.</p>
-      </div>
-    </div>
-  </section>
+<!-- Hero -->
+<section class="relative w-full h-72 sm:h-96 overflow-hidden">
 
-  <!-- Main -->
-  <main class="flex-grow px-4 sm:px-6 py-8 max-w-6xl mx-auto">
-    <div class="text-center mb-8">
-      <a href="customer_menu.html"
-         class="inline-block border border-blue-400 text-blue-700 bg-white/70 px-6 py-3 rounded-lg shadow hover:shadow-lg transition z-50">
-        Browse Menu
-      </a>
-    </div>
+  <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?auto=format&fit=crop&w=1200&q=80"
+       class="absolute inset-0 w-full h-full object-cover brightness-70">
 
+  <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/70"></div>
+
+  <div class="relative z-10 flex flex-col items-center justify-center h-full text-center px-6">
+    
+    <h2 class="text-3xl sm:text-4xl font-bold text-white mb-3 drop-shadow-xl font-[Georgia] tracking-wide">
+      Order Your Favorites
+    </h2>
+
+    <p class="text-white/90 mb-5 text-sm sm:text-base drop-shadow">
+      Premium taste. Simple ordering.
+    </p>
+
+    <a href="customer_menu.html"
+       class="inline-block bg-white/90 text-gray-900 font-semibold 
+              px-8 py-3 rounded-full shadow-lg backdrop-blur-sm
+              hover:bg-white hover:shadow-xl transition">
+      Browse Full Menu
+    </a>
+  </div>
+</section>
  
 <!--  QR Code (stable, points to customer_main)
   <div class="max-w-6xl mx-auto mb-10">
@@ -84,11 +87,24 @@
 -->
 
 
-    <!-- Featured Items (dynamic) -->
-    <section id="featuredItems" class="grid gap-4 sm:gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <!-- Featured Items -->
+<section class="max-w-6xl mx-auto mt-10 mb-6">
+
+  <h2 class="text-lg font-semibold tracking-wide pl-4 border-l-8 border-blue-600 
+             font-[Georgia] uppercase text-gray-900 mb-3">
+    Featured Items
+  </h2>
+
+  <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+    
+    <div id="featuredItems"
+         class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
       <p class="col-span-full text-center text-gray-500">Loading featured items...</p>
-    </section>
-  </main>
+    </div>
+
+  </div>
+
+</section>
 
   <!-- Footer -->
   <footer class="bg-white border-t border-gray-200 mt-10">
@@ -207,7 +223,7 @@
       <button 
         data-minus
         data-id="${item.item_id}"
-        class="w-8 h-8 border border-white-200 rounded-md flex items-center justify-center hover:bg-gray-300">−</button>
+        class="w-8 h-8 border border-gray-200 rounded-md flex items-center justify-center hover:bg-gray-300">−</button>
 
       <!-- qty -->
       <input 
@@ -221,7 +237,7 @@
       <button 
         data-plus
         data-id="${item.item_id}"
-        class="w-8 h-8 border border-white-200 rounded-md flex items-center justify-center hover:bg-gray-300">+</button>
+        class="w-8 h-8 border border-gray-200 rounded-md flex items-center justify-center hover:bg-gray-300">+</button>
 
       <!-- Add button -->
       <button
@@ -229,7 +245,7 @@
         data-id="${item.item_id}"
         data-name="${item.item_name}"
         data-price="${item.price}"
-        class="flex-1 border border-bg-blue-400 text-blue-700 bg-white/70 px-3 py-1 rounded-md shadow hover:shadow-lg transition">
+        class="flex-1 border border-blue-400 text-blue-700 bg-white/70 px-3 py-1 rounded-md shadow hover:shadow-lg transition">
         Add
       </button>
     </div>
@@ -316,13 +332,33 @@ document.addEventListener("click", (e) => {
         console.log("Cart now:", this.items);
       },
 
-      showToast(message) {
-        const toast = document.createElement('div');
-        toast.className = 'fixed bottom-6 right-6 bg-green-600 text-white px-4 py-2 rounded-lg shadow-lg z-50 animate-fade-in';
-        toast.textContent = message;
-        document.body.appendChild(toast);
-        setTimeout(() => toast.remove(), 2500);
-      },
+showToast(message) {
+  const toast = document.createElement('div');
+
+  toast.className = `
+    fixed left-1/2 bottom-8 transform -translate-x-1/2
+    bg-white text-gray-900 px-4 py-2 rounded-xl
+    shadow-lg border border-gray-200
+    flex items-center gap-2
+    opacity-0 transition-opacity duration-300 z-50
+  `;
+
+  toast.innerHTML = `
+    <span class="text-green-600 text-xl">✓</span>
+    <span class="text-sm font-medium">${message}</span>
+  `;
+
+  document.body.appendChild(toast);
+
+  setTimeout(() => {
+    toast.classList.remove("opacity-0");
+  }, 20);
+
+  setTimeout(() => {
+    toast.classList.add("opacity-0");
+    setTimeout(() => toast.remove(), 300);
+  }, 2200);
+},
 
       clear() {
         this.items = [];
@@ -386,13 +422,9 @@ document.addEventListener("click", (e) => {
   });
 </script>
 <a href="customer_cart.html"
-   class="fixed bottom-6 right-6 
-          border border-blue-400 
-          text-blue-700 bg-white/70 
-          px-4 py-2 rounded-lg shadow 
+   class="fixed bottom-6 right-6 border border-blue-400 text-blue-700 bg-white/70 px-4 py-2 rounded-lg shadow 
           hover:shadow-lg transition z-50">
    Cart
 </a>
-
 </body>
 </html>
