--- a/Restaurant Ordering System/public_html/Employee/admin_main.html
+++ b/Restaurant Ordering System/public_html/Employee/admin_main.html
@@ -5,23 +5,88 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      background-color: #f3f4f6;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 font-sans">
-  <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">Admin Dashboard</h1>
-    <button id="logoutBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</button>
+<body>
+  <!-- Header -->
+  <header class="bg-white shadow-sm border-b-2 border-indigo-600 sticky top-0">
+    <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+      <div class="flex items-center gap-2">
+        <i class="fas fa-utensils text-2xl text-indigo-600"></i>
+        <h1 class="text-2xl font-bold text-gray-800">Admin Dashboard</h1>
+      </div>
+      <button id="logoutBtn" class="bg-red-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-red-600 transition">
+        Logout
+      </button>
+    </div>
   </header>
 
-  <main class="p-6 max-w-5xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-4 text-gray-800">Restaurant Management Panel</h2>
-    <p class="text-gray-600 mb-6">Admin-only tools for employee and menu management.</p>
+<!-- Main Content -->
+  <main class="flex-1 max-w-7xl mx-auto px-6 py-6 w-full flex flex-col justify-center">
+    <!-- Title Section -->
+    <div class="text-center mb-8">
+      <h2 class="text-3xl font-bold text-gray-800 mb-2">Restaurant Management</h2>
+      <p class="text-gray-600 text-sm">Quick access to all admin tools</p>
+    </div>
 
-    <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 mt-8">
-      <a href="/Employee/employee_register.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 shadow">➕ Add New Employee</a>
-      <a href="/Employee/employee_list.html" class="bg-yellow-600 text-white px-6 py-3 rounded">Manage Employee</a>
-      <a href="/Employee/admin_reports.html" class="bg-amber-600 text-white px-6 py-3 rounded hover:bg-amber-700 shadow">View Reports</a>
-      <a href="/Employee/admin_menu.html" class="bg-green-600 text-white px-6 py-3 rounded">Manage Menu</a>
+    <!-- Features Grid - Horizontal -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+      
+      <!-- Add Employee -->
+      <a href="/Employee/employee_register.html" class="bg-white rounded-lg shadow-md p-5 border-l-4 border-blue-500 hover:shadow-lg transition block">
+        <div class="flex flex-col items-center text-center">
+          <div class="text-2xl text-blue-500 mb-2">
+            <i class="fas fa-user-plus"></i>
+          </div>
+          <h3 class="text-sm font-bold text-gray-800 mb-1">Add Employee</h3>
+          <p class="text-gray-600 text-xs">Register staff</p>
+        </div>
+      </a>
+
+      <!-- Manage Employees -->
+      <a href="/Employee/employee_list.html" class="bg-white rounded-lg shadow-md p-5 border-l-4 border-amber-500 hover:shadow-lg transition block">
+        <div class="flex flex-col items-center text-center">
+          <div class="text-2xl text-amber-500 mb-2">
+            <i class="fas fa-users"></i>
+          </div>
+          <h3 class="text-sm font-bold text-gray-800 mb-1">Manage Employees</h3>
+          <p class="text-gray-600 text-xs">Edit staff info</p>
+        </div>
+      </a>
+
+      <!-- Manage Menu -->
+      <a href="/Employee/admin_menu.html" class="bg-white rounded-lg shadow-md p-5 border-l-4 border-green-500 hover:shadow-lg transition block">
+        <div class="flex flex-col items-center text-center">
+          <div class="text-2xl text-green-500 mb-2">
+            <i class="fas fa-list"></i>
+          </div>
+          <h3 class="text-sm font-bold text-gray-800 mb-1">Manage Menu</h3>
+          <p class="text-gray-600 text-xs">Update menu</p>
+        </div>
+      </a>
+
+      <!-- View Reports -->
+      <a href="/Employee/admin_reports.html" class="bg-white rounded-lg shadow-md p-5 border-l-4 border-red-500 hover:shadow-lg transition block">
+        <div class="flex flex-col items-center text-center">
+          <div class="text-2xl text-red-500 mb-2">
+            <i class="fas fa-chart-bar"></i>
+          </div>
+          <h3 class="text-sm font-bold text-gray-800 mb-1">View Reports</h3>
+          <p class="text-gray-600 text-xs">Analytics</p>
+        </div>
+      </a>
+
     </div>
   </main>
 
