--- a/Restaurant Ordering System/public_html/Employee/admin_reports.html
+++ b/Restaurant Ordering System/public_html/Employee/admin_reports.html
@@ -6,91 +6,136 @@
   <title>Admin Reports</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<style>
+  .card {
+    @apply bg-white rounded-xl shadow-md p-6 border border-gray-200 transition hover:shadow-lg;
+  }
+  .stat-title {
+    @apply text-sm font-semibold text-gray-500;
+  }
+  .stat-value {
+    @apply text-3xl font-bold;
+  }
+  .section-title {
+    @apply text-xl font-bold text-gray-800 mb-4;
+  }
+</style>
 </head>
+
 <body class="bg-gray-50 font-sans">
-  <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">Restaurant Reports</h1>
-    <div class="flex gap-4">
-      <a href="/Employee/admin_main.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Back to Dashboard</a>
-      <button id="logoutBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</button>
+
+<header class="bg-white shadow-sm border-b-2 border-indigo-600 sticky top-0 z-50">
+  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="flex items-center gap-2">
+      <i class="fas fa-chart-line text-2xl text-indigo-600"></i>
+      <h1 class="text-2xl font-bold text-gray-800">Admin Reports</h1>
     </div>
-  </header>
+
+    <div class="flex gap-3">
+      <a href="/Employee/admin_main.html"
+        class="bg-gray-600 text-white px-4 py-2 rounded-lg hover:bg-gray-700 transition">
+        Dashboard
+      </a>
+      <button id="logoutBtn"
+        class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">
+        Logout
+      </button>
+    </div>
+  </div>
+</header>
 
   <main class="p-6 max-w-7xl mx-auto">
     <!-- Date Range Selector -->
-    <div class="bg-white p-6 rounded-lg shadow mb-6">
-      <h2 class="text-xl font-bold mb-4">Report Period</h2>
-      <div class="flex flex-wrap gap-4 items-center">
-        <div>
-          <label class="block text-sm font-medium text-gray-700">From Date</label>
-          <input type="date" id="startDate" class="mt-1 block w-full border border-gray-300 rounded-md p-2">
-        </div>
-        <div>
-          <label class="block text-sm font-medium text-gray-700">To Date</label>
-          <input type="date" id="endDate" class="mt-1 block w-full border border-gray-300 rounded-md p-2">
-        </div>
-        <button id="generateReport" class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700 mt-6">
-          Generate Report
-        </button>
-        <button id="exportReport" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 mt-6">
-          Export to CSV
-        </button>
-      </div>
+<div class="card mb-8">
+  <h2 class="section-title">Report Filters</h2>
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+    <div>
+      <label class="stat-title">From Date</label>
+      <input type="date" id="startDate"
+        class="mt-1 w-full border border-gray-300 rounded-lg p-2 focus:border-indigo-500">
     </div>
+
+    <div>
+      <label class="stat-title">To Date</label>
+      <input type="date" id="endDate"
+        class="mt-1 w-full border border-gray-300 rounded-lg p-2 focus:border-indigo-500">
+    </div>
+
+    <button id="generateReport"
+      class="bg-green-600 text-white px-6 py-3 rounded-lg hover:bg-green-700 transition self-end">
+      Generate
+    </button>
+
+    <button id="exportReport"
+      class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition self-end">
+      Export CSV
+    </button>
+  </div>
+</div>
 
     <!-- Summary Cards -->
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="text-lg font-semibold text-gray-600">Total Revenue</h3>
-        <p id="totalRevenue" class="text-3xl font-bold text-green-600">$0.00</p>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="text-lg font-semibold text-gray-600">Total Orders</h3>
-        <p id="totalOrders" class="text-3xl font-bold text-blue-600">0</p>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="text-lg font-semibold text-gray-600">Avg Order Value</h3>
-        <p id="avgOrderValue" class="text-3xl font-bold text-purple-600">$0.00</p>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="text-lg font-semibold text-gray-600">Popular Item</h3>
-        <p id="popularItem" class="text-xl font-bold text-amber-600">-</p>
-      </div>
-    </div>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
+
+  <div class="card">
+    <h3 class="stat-title">Total Revenue</h3>
+    <p id="totalRevenue" class="stat-value text-green-600">$0.00</p>
+  </div>
+
+  <div class="card">
+    <h3 class="stat-title">Total Orders</h3>
+    <p id="totalOrders" class="stat-value text-blue-600">0</p>
+  </div>
+
+  <div class="card">
+    <h3 class="stat-title">Avg Order Value</h3>
+    <p id="avgOrderValue" class="stat-value text-purple-600">$0.00</p>
+  </div>
+
+  <div class="card">
+    <h3 class="stat-title">Most Popular Item</h3>
+    <p id="popularItem" class="text-2xl font-bold text-amber-600">-</p>
+  </div>
+
+</div>
 
     <!-- Charts Section -->
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="text-lg font-semibold mb-4">Revenue Over Time</h3>
-        <canvas id="revenueChart" height="250"></canvas>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="text-lg font-semibold mb-4">Top Selling Items</h3>
-        <canvas id="itemsChart" height="250"></canvas>
-      </div>
-    </div>
+	<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-10">
+
+  <div class="card">
+    <h3 class="section-title">Revenue Over Time</h3>
+    <canvas id="revenueChart" height="250"></canvas>
+  </div>
+
+  <div class="card">
+    <h3 class="section-title">Top Selling Items</h3>
+    <canvas id="itemsChart" height="250"></canvas>
+  </div>
+
+</div>
 
     <!-- Detailed Reports -->
-    <div class="bg-white p-6 rounded-lg shadow mb-6">
-      <h3 class="text-lg font-semibold mb-4">Order Details</h3>
-      <div class="overflow-x-auto">
-        <table class="min-w-full table-auto">
-          <thead class="bg-gray-50">
-            <tr>
-              <th class="px-4 py-2 text-left">Order ID</th>
-              <th class="px-4 py-2 text-left">Customer</th>
-              <th class="px-4 py-2 text-left">Items</th>
-              <th class="px-4 py-2 text-left">Total</th>
-              <th class="px-4 py-2 text-left">Status</th>
-              <th class="px-4 py-2 text-left">Date</th>
-            </tr>
-          </thead>
-          <tbody id="ordersTableBody" class="divide-y divide-gray-200">
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </main>
+<div class="card mb-12">
+  <h3 class="section-title">Order Details</h3>
+
+  <div class="overflow-x-auto">
+    <table class="min-w-full text-sm">
+      <thead class="bg-gray-100 text-gray-600 uppercase text-xs">
+        <tr>
+          <th class="px-4 py-3 text-left">Order ID</th>
+          <th class="px-4 py-3 text-left">Customer</th>
+          <th class="px-4 py-3 text-left">Items</th>
+          <th class="px-4 py-3 text-left">Total</th>
+          <th class="px-4 py-3 text-left">Status</th>
+          <th class="px-4 py-3 text-left">Date</th>
+        </tr>
+      </thead>
+      <tbody id="ordersTableBody" class="divide-y divide-gray-200"></tbody>
+    </table>
+  </div>
+</div>
+
+</main>
 
   <script>
     // Set default dates (last 30 days)
