--- a/Restaurant Ordering System/public_html/Employee/employee_list.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_list.html
@@ -5,44 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Employee List | Admin Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      background-color: #f3f4f6;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 font-sans min-h-screen">
-  <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">Employee Management</h1>
-<div class="flex gap-3">
-  <a href="/Employee/employee_register.html"
-     class="bg-blue-600 text-white px-4 py-2 rounded-md shadow hover:bg-blue-700 
-            transition text-sm flex items-center gap-2">
-     Add Employee
-  </a>
+<body class="font-sans min-h-screen">
 
-  <a href="/Employee/admin_main.html"
-     class="bg-gray-100 text-gray-800 px-4 py-2 rounded-md border border-gray-300 
-            hover:bg-gray-200 transition text-sm flex items-center gap-2">
-     Back to Dashboard
-  </a>
-</div>  </header>
-
-  <main class="p-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-semibold text-gray-700 mb-4">All Employees</h2>
-    <div class="overflow-x-auto bg-white shadow-md rounded-lg">
-      <table class="min-w-full text-sm text-left text-gray-700">
-        <thead class="bg-amber-100">
-          <tr>
-            <th class="py-3 px-4">ID</th>
-            <th class="py-3 px-4">Name</th>
-            <th class="py-3 px-4">Username</th>
-            <th class="py-3 px-4">Role</th>
-            <th class="py-3 px-4">Email</th>
-            <th class="py-3 px-4">Phone</th>
-            <th class="py-3 px-4">Hire Date</th>
-            <th class="py-3 px-4 text-center">Action</th>
-          </tr>
-        </thead>
-        <tbody id="employeeTable" class="divide-y divide-gray-200"></tbody>
-      </table>
+<!-- HEADER -->
+<header class="bg-white shadow-sm border-b-2 border-indigo-600 sticky top-0">
+  <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="flex items-center gap-2">
+      <i class="fas fa-users text-2xl text-indigo-600"></i>
+      <h1 class="text-2xl font-bold text-gray-800">Employee Management</h1>
     </div>
-  </main>
+
+    <div class="flex gap-3">
+      <a href="/Employee/employee_register.html"
+        class="bg-blue-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-blue-700 transition flex items-center gap-2">
+        <i class="fas fa-user-plus"></i>Add Employee
+      </a>
+
+      <a href="/Employee/admin_main.html"
+        class="bg-gray-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-gray-700 transition flex items-center gap-2">
+        <i class="fas fa-arrow-left"></i>Back
+      </a>
+    </div>
+  </div>
+</header>
+
+
+<!-- MAIN CONTENT -->
+<main class="max-w-6xl mx-auto px-6 py-8">
+
+  <h2 class="text-3xl font-bold text-gray-800 mb-6">All Employees</h2>
+
+  <div class="bg-white rounded-lg shadow-md border-l-4 border-amber-500 overflow-hidden">
+
+    <table class="min-w-full text-sm text-left text-gray-700">
+      <thead class="bg-amber-100 text-gray-800 text-sm uppercase tracking-wide">
+        <tr>
+          <th class="py-3 px-4">ID</th>
+          <th class="py-3 px-4">Name</th>
+          <th class="py-3 px-4">Username</th>
+          <th class="py-3 px-4">Role</th>
+          <th class="py-3 px-4">Email</th>
+          <th class="py-3 px-4">Phone</th>
+          <th class="py-3 px-4">Hire Date</th>
+          <th class="py-3 px-4 text-center">Action</th>
+        </tr>
+      </thead>
+
+      <tbody id="employeeTable" class="divide-y divide-gray-200 bg-white"></tbody>
+    </table>
+
+  </div>
+</main>
 
   <script>
     async function loadEmployees() {
@@ -69,10 +95,10 @@
           <td class="py-3 px-4">${emp.phone || '-'}</td>
           <td class="py-3 px-4">${emp.hire_date || '-'}</td>
           <td class="py-3 px-4 text-center">
-            <button onclick="deleteEmployee(${emp.employee_id})"
-                    class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">
-              Delete
-            </button>
+          <button onclick="deleteEmployee(${emp.employee_id})"
+            class="bg-red-500 text-white px-3 py-2 rounded-lg font-semibold hover:bg-red-600 transition text-sm">
+            <i class="fas fa-trash"></i>
+          </button>
           </td>
         `;
         table.appendChild(row);
