--- a/Restaurant Ordering System/public_html/Employee/employee_register.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_register.html
@@ -5,58 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Employee Registration</title>
   <script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    background-color: #f3f4f6;
+  }
+</style>
 </head>
 
-<body class="bg-gray-50 font-sans">
+<body class="font-sans">
 
 <!-- Header -->
-<header class="bg-white shadow p-4 flex justify-between items-center">
-  <h1 class="text-2xl font-bold text-gray-800">Admin Dashboard</h1>
-  <a href="/Employee/admin_main.html" 
-     class="bg-gray-100 text-gray-800 px-4 py-2 rounded hover:bg-gray-200 transition">
-    Back to Dashboard
-  </a>
+<header class="bg-white shadow-sm border-b-2 border-indigo-600 sticky top-0">
+  <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="flex items-center gap-2">
+      <i class="fas fa-utensils text-2xl text-indigo-600"></i>
+      <h1 class="text-2xl font-bold text-gray-800">Employee Registration</h1>
+    </div>
+    <a href="/Employee/admin_main.html" class="bg-gray-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-gray-700 transition flex items-center gap-2">
+      <i class="fas fa-arrow-left"></i>Back
+    </a>
+  </div>
 </header>
 
 <!-- Main Content -->
-<main class="p-6 max-w-5xl mx-auto">
-  <div class="bg-white rounded-lg shadow-md p-6">
+<main class="max-w-4xl mx-auto px-6 py-8">
+<div class="bg-white rounded-lg shadow-md p-8 border-l-4 border-blue-500">
     <div class="text-center mb-8">
       <h2 class="text-3xl font-bold text-gray-800 mb-2">Register New Employee</h2>
-      <p class="text-gray-600">Add new employees to the restaurant management system</p>
+      <p class="text-gray-600 text-sm">Add new staff members to your restaurant system</p>
     </div>
 
     <!-- Registration Form -->
     <form id="employeeForm" class="max-w-2xl mx-auto">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <div class="md:col-span-2">
-          <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
+	<div class="md:col-span-2">
+          <label for="name" class="block text-sm font-semibold text-gray-700 mb-2">Full Name</label>
           <input id="name" type="text" required
-            class="w-full border border-gray-300 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+            class="w-full border-2 border-gray-300 p-3 rounded-lg focus:outline-none focus:border-blue-500 transition">
         </div>
 
-        <div>
-          <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Username</label>
+	<div>
+          <label for="username" class="block text-sm font-semibold text-gray-700 mb-2">Username</label>
           <input id="username" type="text" required
-            class="w-full border border-gray-300 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+            class="w-full border-2 border-gray-300 p-3 rounded-lg focus:outline-none focus:border-blue-500 transition">
         </div>
 
         <div>
-          <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+          <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">Email</label>
           <input id="email" type="email" required
-            class="w-full border border-gray-300 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+            class="w-full border-2 border-gray-300 p-3 rounded-lg focus:outline-none focus:border-blue-500 transition">
         </div>
 
         <div>
-          <label for="phone" class="block text-sm font-medium text-gray-700 mb-1">Phone (optional)</label>
+          <label for="phone" class="block text-sm font-semibold text-gray-700 mb-2">Phone (optional)</label>
           <input id="phone" type="tel"
-            class="w-full border border-gray-300 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+            class="w-full border-2 border-gray-300 p-3 rounded-lg focus:outline-none focus:border-blue-500 transition">
         </div>
 
         <div>
-          <label for="role" class="block text-sm font-medium text-gray-700 mb-1">Role</label>
+          <label for="role" class="block text-sm font-semibold text-gray-700 mb-2">Role</label>
           <select id="role"
-            class="w-full border border-gray-300 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+            class="w-full border-2 border-gray-300 p-3 rounded-lg focus:outline-none focus:border-blue-500 transition">
             <option value="Employee">Employee</option>
             <option value="Manager">Manager</option>
             <option value="Admin">Admin</option>
@@ -64,20 +79,19 @@
         </div>
 
         <div>
-          <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+          <label for="password" class="block text-sm font-semibold text-gray-700 mb-2">Password</label>
           <input id="password" type="password" required
-            class="w-full border border-gray-300 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+            class="w-full border-2 border-gray-300 p-3 rounded-lg focus:outline-none focus:border-blue-500 transition">
         </div>
-      </div>
 
-      <div class="mt-8 flex justify-center gap-4">
+<div class="mt-8 flex justify-center gap-4">
         <button type="submit"
-          class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition shadow-md font-medium">
-          Register Employee
+          class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition font-semibold flex items-center gap-2">
+          <i class="fas fa-user-check"></i>Register Employee
         </button>
         <button type="button" id="clearForm"
-          class="bg-gray-500 text-white px-8 py-3 rounded-lg hover:bg-gray-600 transition shadow-md font-medium">
-          Clear Form
+          class="bg-gray-500 text-white px-8 py-3 rounded-lg hover:bg-gray-600 transition font-semibold flex items-center gap-2">
+          <i class="fas fa-redo"></i>Clear Form
         </button>
       </div>
     </form>
